# SaaSForge

./: .dockerignore  .editorconfig  .env.example  .gitignore  AUTHENTICATION_UPDATE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  DATABASE_FIXES_APPLIED.md  INTEGRATION_TESTS_SETUP.md  Makefile  QUICKSTART.md  README.md  README_CICD.md  SECURITY_FIXES.md  SECURITY_FIXES_SUMMARY.md  TESTING_COMPLETE.md  UPDATE_SUMMARY.md  docker-compose.test.yml  docker-compose.yml  srs-boilerplate-saas.md  to-be delete.txt
.agents/: AGENT_SUMMARY.md  QUICKSTART.md  README.md  TEST_AGENTS.md  config.yaml  pre-commit.sh  run_all.py
.agents/architect/: ARCHITECTURE_RULES.md  review.py
.agents/architecture/: review.py
.agents/cicd/: CICD_RULES.md  README.md  review.py
.agents/database/: review.py
.agents/performance/: review.py
.agents/security/: review.py
.agents/testing/: review.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agents.yml  ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  docker-build.yml  load-test.yml
api/: alembic.ini  main.py  pytest.ini  requirements.txt  run_tests.sh
api/alembic/: env.py
api/alembic/versions/: 3a3c88751a5c_add_missing_constraints_and_indexes.py  5759b12b35b4_initial_schema_baseline.py
api/clients/: __init__.py  auth_client.py  notification_client.py  payment_client.py  upload_client.py
api/dependencies/: __init__.py  auth.py
api/middleware/: jwt_middleware.py  logging_middleware.py  rate_limit_middleware.py
api/models/: auth.py  notification.py  payment.py  upload.py
api/routers/: auth.py  email.py  notification.py  oauth.py  payment.py  upload.py
api/services/: email_service.py  mock_stripe_client.py  s3_service.py
api/tests/: conftest.py  test_auth.py
api/tests/integration/: __init__.py  test_auth_flow.py  test_error_handling.py  test_payment_flow.py  test_upload_flow.py
api/workers/: email_worker.py
config/: redis.conf
db/: schema.sql  test_schema.sql
db/migrations/: 002_upload_schema.sql  004_notification_schema.sql
db/migrations.obsolete/: 001_initial_schema.sql  003_payment_schema.sql  README.md
db/seeds/: 001_sample_data.sql
docker/: api.Dockerfile  auth.Dockerfile  nginx.conf  notification.Dockerfile  payment.Dockerfile  ui.Dockerfile  upload.Dockerfile
docs/: CPP_BUILD_SETUP.md  IMPLEMENTATION_SESSION_2025-11-13.md  MVP-COMPLETION-SUMMARY.md  TEST_RESULTS_2025-11-13.md  localstack-s3-guide.md  srs-boilerplate-recommendation-implementation.md  srs-boilerplate-saas.md  week3-implementation-summary.md  week4-day3-error-handling-summary.md  week4-day4-testing-summary.md  week4-day5-final-documentation.md
k8s/base/: api-deployment.yaml  auth-deployment.yaml  ingress.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
proto/: auth.proto  notification.proto  payment.proto  upload.proto
scripts/: gen-certs.sh  gen-proto.sh  install-cpp-deps.sh  localstack-init.sh  migrate.sh  run-email-worker.sh  run-integration-tests.sh  setup-dev.sh  smoke-test.sh  test-s3-presign.py
scripts/backup/: README.md  postgres-backup.sh  postgres-restore.sh
services/cpp/: CMakeLists.txt
services/cpp/auth/: CMakeLists.txt
services/cpp/auth/include/auth/: auth_service.h
services/cpp/auth/src/: auth_service.cpp  main.cpp
services/cpp/auth/tests/: README.md  api_key_scope_test.cpp  auth_integration_test.cpp  auth_service_test.cpp
services/cpp/common/: CMakeLists.txt
services/cpp/common/include/common/: db_pool.h  email_queue.h  jwt_validator.h  mock_stripe_client.h  mtls_credentials.h  password_hasher.h  redis_client.h  tenant_context.h  totp_helper.h  webhook_delivery.h  webhook_signer.h
services/cpp/common/src/: db_pool.cpp  email_queue.cpp  jwt_validator.cpp  mock_stripe_client.cpp  mtls_credentials.cpp  password_hasher.cpp  redis_client.cpp  tenant_context.cpp  totp_helper.cpp  webhook_delivery.cpp  webhook_signer.cpp
services/cpp/common/tests/: email_queue_test.cpp  jwt_validator_test.cpp  mock_stripe_client_test.cpp  redis_client_test.cpp  totp_helper_test.cpp  webhook_signer_test.cpp  webhook_ssrf_test.cpp
services/cpp/notification/: CMakeLists.txt
services/cpp/notification/include/notification/: notification_service.h
services/cpp/notification/src/: main.cpp  notification_service.cpp
services/cpp/notification/tests/: notification_service_test.cpp
services/cpp/payment/: CMakeLists.txt
services/cpp/payment/include/payment/: payment_service.h
services/cpp/payment/src/: main.cpp  payment_service.cpp
services/cpp/payment/tests/: payment_service_test.cpp
services/cpp/upload/: CMakeLists.txt
services/cpp/upload/include/upload/: upload_service.h
services/cpp/upload/src/: main.cpp  upload_service.cpp
services/cpp/upload/tests/: upload_service_test.cpp
tests/e2e/: test_user_journey.spec.ts
tests/integration/: test_auth_flow.py
tests/load/: README.md  api_load_test.js  auth_load_test.js  payment_load_test.js  upload_load_test.js
tests/load/results/: .gitkeep
ui/: index.html  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/auth/: BackupCodes.tsx  OAuthButton.tsx  OTPVerification.tsx  ProtectedRoute.tsx  TOTPEnrollment.tsx  TwoFactorModal.tsx
ui/src/components/dashboard/: MetricCard.tsx
ui/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
ui/src/components/ui/: Alert.tsx  Button.tsx  ErrorBoundary.tsx  Input.tsx  Loading.tsx  Toast.tsx
ui/src/components/upload/: FileUpload.tsx
ui/src/contexts/: ToastContext.tsx
ui/src/pages/: BillingPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OAuthCallbackPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  TwoFactorSettingsPage.tsx  UploadPage.tsx  UploadsPage.tsx
ui/src/store/: authStore.ts
ui/src/types/: index.ts
